--- a/src/app/pages/list-pokemons/list-pokemons.page.html
+++ b/src/app/pages/list-pokemons/list-pokemons.page.html
@@ -1,13 +1,28 @@
-<ion-header [translucent]="true">
+<!-- list-pokemons.page.html -->
+<ion-header>
   <ion-toolbar>
-    <ion-title>list-pokemons</ion-title>
+    <ion-title>Pokedex</ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar (ionChange)="onSearchChange($event)"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">list-pokemons</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let p of pokemons | slice:0: (pokemons.length) ">
+      <ion-thumbnail slot="start">
+        <img [src]="p.sprites.front_default" />
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ p.name | titlecase }}</h2>
+        <p>#{{ p.id }} - {{ p.types[0]?.type?.name }}</p>
+      </ion-label>
+      <ion-button slot="end" [routerLink]="['/pokemon-detail', p.id]">Ver</ion-button>
+    </ion-item>
+  </ion-list>
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadPokemons($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando más pokémon..."></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
